Updated shadowrocke configure file.

--- a/shadowrocket_config.conf
+++ b/shadowrocket_config.conf
@@ -197,6 +197,8 @@ DOMAIN-SUFFIX,meitudata.com,PROXY
 DOMAIN-SUFFIX,meitustat.com,PROXY
 DOMAIN-SUFFIX,meixincdn.com,PROXY
 DOMAIN-SUFFIX,mgtv.com,PROXY
+DOMAIN-SUFFIX,migu.com,PROXY
+DOMAIN-SUFFIX,miguvideo.com,PROXY
 DOMAIN-SUFFIX,mi-img.com,PROXY
 DOMAIN-SUFFIX,microsoft.com,PROXY
 DOMAIN-SUFFIX,miui.com,PROXY
