Added ip138 and upyun to shadowrocket config file.

--- a/shadowrocket_config.conf
+++ b/shadowrocket_config.conf
@@ -157,6 +157,7 @@ DOMAIN-SUFFIX,infinitynewtab.com,PROXY
 DOMAIN-SUFFIX,iop.org,PROXY
 DOMAIN-SUFFIX,ip-cdn.com,PROXY
 DOMAIN-SUFFIX,ip.la,PROXY
+DOMAIN-SUFFIX,ip138.com,PROXY
 DOMAIN-SUFFIX,ipip.net,PROXY
 DOMAIN-SUFFIX,ipv6-test.com,PROXY
 DOMAIN-SUFFIX,iqiyi.com,PROXY
@@ -311,6 +312,7 @@ DOMAIN-SUFFIX,udacity.com,PROXY
 DOMAIN-SUFFIX,un.org,PROXY
 DOMAIN-SUFFIX,uni-bielefeld.de,PROXY
 DOMAIN-SUFFIX,uning.com,PROXY
+DOMAIN-SUFFIX,upyun.com,PROXY
 DOMAIN-SUFFIX,v-56.com,PROXY
 DOMAIN-SUFFIX,visualstudio.com,PROXY
 DOMAIN-SUFFIX,vmware.com,PROXY
